--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Node.js app",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "start:dev": "nodemon src/app.js"
   },
   "author": "Dimitar Stefanov",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
