--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Dimitar Stefanov",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.3"
   },
   "devDependencies": {
