--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "start:dev": "nodemon src/app.js"
+    "dev": "npm-run-all --parallel sass-watch  nodemon-watch",
+    "sass-watch": "sass --watch src/public/scss/main.scss src/public/css/main.css",
+    "nodemon-watch": "nodemon src/app.js"
   },
   "author": "Dimitar Stefanov",
   "license": "MIT",
@@ -15,6 +17,7 @@
     "express-ejs-layouts": "^2.5.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5"
   }
 }
