add styles.scss and import all styles there

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "npm-run-all --parallel sass-watch  nodemon-watch",
-    "sass-watch": "sass --watch scss/main.scss src/public/css/main.css",
+    "sass-watch": "sass --watch scss/styles.scss src/public/css/main.css",
     "nodemon-watch": "nodemon src/app.js"
   },
   "author": "Dimitar Stefanov",
